--- a/Inventory Management/views/auth.ejs
+++ b/Inventory Management/views/auth.ejs
@@ -82,19 +82,33 @@
             </section>
 
             <section class="content">
-                <div class="card">
-                    <div class="card-header bg-danger">
-                        <h3 class="card-title">
-                            <%=msg%>
-                        </h3>
+                <div class="card" style="margin-left: 5px; width:500px">
+                    <div class="card-header bg-info">
+                        <h3 class="card-title">Update Stock Details</h3>
+                    </div>
+                    <div class="card-body table-responsive p-0" style="height: 500px">
+                        <form action="/authcheck?dbName=<%=dbName%>&operation=<%=operation%>&pid=<%=pid%>" method="post" style="padding: 20 0 0 10; margin-bottom:0">
+                            <div class="form-group">
+                                <label>
+                                    Username 
+                                </label>
+                                <input type="text" placeholder="Username" name="username" required>
+                            </div>
+                            <div class="form-group">
+                                <label>
+                                    Password
+                                </label>
+                                <input type="password" placeholder="Password" name="password" required>
+                            </div>
+                            <div class="card-footer" style="margin-left:-10px; height: min-content;">
+                                <button type="submit" class="btn btn-success">Submit</button>
+                                <a href="/" class="btn btn-danger" style="margin-left: 200px;">Cancel</a>
+                            </div>
+                        </form>
                     </div>
                 </div>
-                <a class="btn btn-info btn-sm" href="/update">I understand,go back</a>
-                <a class="btn btn-info btn-sm" href="/">Home</a>
             </section>
         </div>
-
-
     </div>
 </body>
 
