--- a/Inventory Management/views/index.ejs
+++ b/Inventory Management/views/index.ejs
@@ -26,7 +26,7 @@
             <!-- Left navbar links -->
             <ul class="navbar-nav">
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="/" class="nav-link">Home</a>
+                    <a href="/" class="nav-link"><i class="fas fa-home"></i>Home</a>
                 </li>
             </ul>
         </nav>
@@ -44,24 +44,29 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <li class="nav-item">
-                            <a href="/add" class="nav-link">
+                            <a href="/auth?dbName=<%=dbName%>&operation=add" class="nav-link">
                                 <i class="nav-icon text-info fas fa-cart-plus"></i>
                                 <p>Add Product</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/details" class="nav-link">
+                            <a href="/details?dbName=<%=dbName%>" class="nav-link">
                                 <i class="nav-icon fas fa-database text-info"></i>
                                 <p class="text">Sales Details</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/update" class="nav-link">
+                            <a href="/auth?dbName=<%=dbName%>&operation=update" class="nav-link">
                                 <i class="nav-icon text-info fas fa-upload"></i>
                                 <p class="text">Update Sales</p>
                             </a>
                         </li>
-
+                        <li class="nav-item">
+                            <a href="/show?dbName=<%=dbName%>" class="nav-link">
+                                <i class="nav-icon text-info fas fa-upload"></i>
+                                <p class="text">Show Inventory</p>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
@@ -73,7 +78,9 @@
         <div class="content-wrapper">
 
             <section class="content-header">
-                <h1>Fashion Feet Inventory Management</h1>
+                <h1>
+                    <%=dbName%>
+                </h1>
             </section>
 
             <section class="content">
@@ -137,16 +144,17 @@
                                             <%=users[i]['Selling Price']%>
                                         </td>
                                         <td class="project-actions text-right">
-                                            <a class="btn btn-info btn-sm" href="/edit?pid=<%=users[i]['Product ID']%>"><i class="fas fa-pencil-alt"></i> Edit</a>
-                                            <a class="btn btn-danger btn-sm" href="/delete?pid=<%=users[i]['Product ID']%>"><i class="fas fa-trash"></i> Delete</a>
+                                            <a class="btn btn-info btn-sm" href="/auth?dbName=<%=dbName%>&operation=edit&pid=<%=users[i]['Product ID']%>"><i class="fas fa-pencil-alt"></i> Edit</a>
+                                            <a class="btn btn-danger btn-sm" href="/auth?dbName=<%=dbName%>&operation=delete&pid=<%=users[i]['Product ID']%>"><i class="fas fa-trash"></i> Delete</a>
                                         </td>
                                     </tr>
                                     <% } %>
                             </tbody>
                         </table>
                     </div>
+                    <%=dbName%>
                 </div>
-                <a class="btn btn-info" href="/add"><i class="fas fa-plus-square"></i> &nbsp;Add new product</a>
+                <a class="btn btn-info" href="/auth?dbName=<%=dbName%>&operation=add"><i class="fas fa-plus-square"></i> &nbsp;Add new product</a>
             </section>
 
         </div>
